--- a/test/fixtures/messages.yml
+++ b/test/fixtures/messages.yml
@@ -1,5 +1,6 @@
 <% require 'faker' %>
-<% require '../dummy/lib/helper_methods' %>
+<% require 'helper_methods' %>
+<% @users = (1..50).to_a %>
 <% @owners = @users %>
 
 
