--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,15 @@
 language: ruby
 rvm:
   - 1.9.3
-  - 2.0.0
+  #- 2.0.0
 env:
   - DB=sqlite
-  - DB=mysql
-  - DB=postgresql
+  #- DB=mysql
+  #- DB=postgresql
 script:
-  - RAILS_ENV=test bundle exec rake db:migrate --trace
+  - RAILS_ENV=test
+  - cd dummy
+  - bundle exec rake db:migrate --trace
   - bundle exec rake db:test:prepare
+  - cd ..
   - bundle exec rake test
