--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: ruby
+cache: bundler
 rvm:
   - 1.9.3
   #- 2.0.0
@@ -10,6 +11,11 @@ script:
   - RAILS_ENV=test
   - sh -c 'cd test/dummy'
   - sh -c 'ls -ll'
+  - sh -c 'cd ./test/dummy'
+  - sh -c 'ls -ll'
+  - sh -c 'cd ./test'
+  - sh -c 'ls -ll'
+  - cd .test/dummy
   - bundle exec rake db:drop db:create db:migrate db:seed test
   - sh -c 'cd ../..'
   - bundle exec rake test
