--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,11 @@ language: ruby
 cache: bundler
 rvm:
   - 1.9.3
-  #- 2.0.0
+  - 2.0.0
 env:
   - DB=sqlite
-  #- DB=mysql
-  #- DB=postgresql
+  - DB=mysql
+  - DB=postgresql
 script:
   - RAILS_ENV=test
   - cd ./test/dummy
